--- a/style.css
+++ b/style.css
@@ -7,13 +7,6 @@ body {
     font-family: Arial, sans-serif;
 }
 
-button{
-    height: 100px;
-    width: 100px;
-    border: 5px solid grey;
-    border-radius: 50%;
-}
-
 .stopwatch {
     text-align: center;
     padding: 40px;
@@ -34,9 +27,35 @@ button {
     margin: 5px;
     padding: 5px 10px;
     cursor: pointer;
+    height: 100px;
+    width: 100px;
+    border: 5px solid grey;
+    border-radius: 50%;
 }
 
 #laps {
     list-style-type: none;
     padding: 0;
+}
+
+@media (max-width:500px){
+    button{
+        height: 70px;
+        width: 70px;
+        font-size: 16px;
+        border: 5px solid grey;
+    }
+    .stopwatch{
+        padding: 10px;
+    }
+}
+
+@media (max-width:300px) {
+    button{
+        height: 50px;
+        width: 50px;
+        font-size: 12px;
+        padding: 5px;
+        border: 3px solid grey;
+    }
 }
